--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "bin": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "npm run build && node build"
+    "test": "npm run build && node build",
+    "publish": "npm run build && npm publish"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.4"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
