--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "linesofcode",
+  "name": "@varuntiwari/linesofcode",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
