:sparkles: Update package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@varuntiwari/linesofcode",
+  "name": "tloc",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin": "build/index.js",
+  "bin": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "test": "npm run build && node build"
