--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tloc",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": "lib/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "npm run build && node build"
+    "test": "npm run build && node lib"
   },
   "keywords": [],
   "author": "",
