--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tloc",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "bin": "lib/index.js",
@@ -30,9 +30,13 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/minimist": "^1.2.2",
     "@types/node": "^18.6.4"
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "minimist": "^1.2.6"
+  }
 }
