--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tloc",
-  "version": "1.1.1",
-  "description": "",
+  "version": "1.1.2",
+  "description": "Find out how many lines of code you have written for your project.",
   "main": "index.js",
   "bin": "lib/index.js",
   "scripts": {
